<resources>
    <string name="app_name">Login Sesame</string>
    <string name="user_name"></string>
    <string name="password"></string>
    <string name="email"></string>
    <string name="registration_choose_username">Choose Username</string>
    <string name="registration_choose_pwd">Choose Password</string>
    <string name="registration_enter_email">Enter your E-mail</string>
    <string name="btn_login">Login</string>
    <string name="btn_ok">OK</string>
...
